# mdns

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  mdns.cpp  mdns.hpp  mdnsConfigVersion.cmake  mdns_plusplusCommonSettings.cmake  mdns_plusplusConfig.cmake  mdns_plusplusConfigVersion.cmake.in
iOS/: CMakeLists.txt
mdns_plusplus/: mdns.cpp  mdns.hpp  mdns_plusplusConfig.h  mdns_plusplusConfig.h.in
non-iOS/: CMakeLists.txt
non-iOS/CPack/: CMakeLists.txt
